Add g3dit run configuration to gradle build file